--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/style.css
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/style.css
@@ -4,7 +4,7 @@ body {
     color: #ffffff;
     margin: 0;
     padding: 0;
-    display: flex;
+    display: center;
     justify-content: center;
     align-items: center;
     height: 150vh;
